--- a/ui_tracer_extension/manifest.json
+++ b/ui_tracer_extension/manifest.json
@@ -1,31 +1,24 @@
 {
-    "manifest_version": 3,
-    "name": "UI Trace Recorder",
-    "version": "1.0",
-    "description": "ブラウザのUI操作を記録するChrome拡張機能",
-    "permissions": [
-      "activeTab",
-      "scripting",
-      "storage"
-    ],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png"
-      }
-    },
-    "icons": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png"
+  "manifest_version": 3,
+  "name": "UI Tracer",
+  "version": "1.0",
+  "description": "Webページでの操作を記録してJSON形式で出力する拡張機能",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage",
+    "downloads"
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
-  }
+  ]
+}
