--- a/ui_tracer_extension/manifest.json
+++ b/ui_tracer_extension/manifest.json
@@ -7,7 +7,11 @@
     "activeTab",
     "scripting",
     "storage",
-    "downloads"
+    "downloads",
+    "tabs"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "popup.html"
