--- a/ui_tracer/ui_tracer/src/main/resources/application.properties
+++ b/ui_tracer/ui_tracer/src/main/resources/application.properties
@@ -1,1 +1,34 @@
 spring.application.name=ui_tracer
+
+# H2データベース設定
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2コンソール有効化
+spring.h2.console.enabled=true 
+spring.h2.console.path=/h2-console
+
+# JPA設定
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# エンコード設定
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+# 追加のUTF-8設定
+spring.jackson.character-encoding=UTF-8
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.fail-on-empty-beans=false
+
+# Thymeleaf設定
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
